# conception-space

./: .gitignore  CHANGELOG.md  LICENSING.md  README.md  REUSE.toml  electron-builder.yml  eslint.config.mjs  package-lock.json  package.json  pyproject.toml
.claude/: launch.json
.github/workflows/: dev-release-electron.yml  release-electron.yml  test-electron.yml
app/: package-lock.json  package.json
app/scripts/: generate_test1000.py  generate_test2000.py  generate_test550.py
app/src/main/: index.js
app/src/preload/: index.js
app/src/renderer/: index.html
app/src/renderer/public/examples/: solar.views.json5  test1000.cns  test2000.cns  test2000.views.json5
app/src/renderer/src/: bookmarks.js  camera_path.js  controls.js  main.js  parser.js  target_tween.js
docs/: CNS-Lang_Design_Thoughts.md  CONTRIBUTING.md  The_CNS_Language.hard-edge.html  The_CNS_Language.html  The_CNS_Language.md  _post-transfer-handoff.md  ai-authoring_ideas.md  commonality_visual_study.md  hand-authoring_ideas.md  ideas.md  in-flight_ideas.md  northstar.html  northstar.kandinsky.html  northstar.md  space_architecture_ideas.md  user_intro_to_conception_space.html  user_intro_to_conception_space.md  visionos_ideas.md
examples/: solar.cns
scripts/: clean-oss-licenses.mjs  prepare-legal.mjs
src/conception_space/: __init__.py  spacemouse.py  translator.py
src/main/: index.js
src/renderer/public/examples/: sample.md  solar.cns  test1000.views.json5  test550.cns
src/renderer/src/: parser.js  pre_aim.js  scene.js  style.css
