[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "conception-space"
version = "0.8.0"
requires-python = ">=3.11"
license = "AGPL-3.0-or-later"
authors = [{ name = "Gary Frattarola", email = "garyf@parkviewlab.ai" }]
dependencies = [
    "hid>=1.0.6",
    "websockets>=13.0",
]

[project.scripts]
cs2html       = "conception_space.translator:main"
cs-spacemouse = "conception_space.spacemouse:main"

[dependency-groups]
dev = [
    "ruff>=0.9",
    "ty>=0.0.1a8",
]

[tool.hatch.build.targets.wheel]
packages = ["src/conception_space"]

[tool.ruff]
line-length    = 100
target-version = "py311"
src            = ["src"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.ty.environment]
python-version = "3.11"
